--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "autoprefixer": "^10.4.13",
         "concurrently": "^7.6.0",
         "cross-env": "^7.0.3",
+        "devtron": "^1.4.0",
         "electron": "^22.0.0",
         "electron-builder": "^23.6.0",
         "kill-port": "^2.0.1",
