--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@element-plus/icons-vue": "^2.0.10",
         "@vueuse/electron": "^9.9.0",
         "element-plus": "^2.2.27",
+        "mitt": "^3.0.0",
         "tree-node-cli": "^1.6.0",
         "vue": "^3.2.45",
         "vue-router": "^4.1.6"
