--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "element-plus": "^2.2.27",
         "mitt": "^3.0.0",
         "pinia": "^2.0.28",
+        "sass": "^1.58.0",
         "tree-node-cli": "^1.6.0",
         "vue": "^3.2.45",
         "vue-router": "^4.1.6"
